--- a/src/components/ItemsList/base.scss
+++ b/src/components/ItemsList/base.scss
@@ -5,7 +5,9 @@
     overflow: hidden;
     max-height: 100px;
   }
-  .MuiTypography-h5 {
-    font-size: 1.2rem;
+  .header{
+    span{
+      font-size: 1.2rem;
+    }
   }
 }
